// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(ForwardRef(Button))
  className="sample-class"
  classes={
    Object {
      "containedPrimary": "buttonPrimary makeStyles-buttonShadow-1",
      "containedSecondary": "buttonSecondary makeStyles-buttonShadow-1",
      "disabled": "buttonDisabled",
      "label": "buttonLabel",
      "outlined": "buttonOutlined makeStyles-buttonShadow-1",
      "outlinedPrimary": "buttonOutlined makeStyles-buttonShadow-1",
      "outlinedSecondary": "buttonOutlinedSecondary makeStyles-buttonShadow-1",
      "root": "button",
    }
  }
  color="secondary"
  customclasses={
    Array [
      "sample-class",
    ]
  }
  data-qa="button-qa"
  disabled={true}
  label={
    <div>
      snapshot label
    </div>
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  variant="outlined"
>
  <div>
    snapshot label
  </div>
</WithStyles(ForwardRef(Button))>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(Button))
  className=""
  classes={
    Object {
      "containedPrimary": "buttonPrimary makeStyles-buttonShadow-1",
      "containedSecondary": "buttonSecondary makeStyles-buttonShadow-1",
      "disabled": "buttonDisabled",
      "label": "buttonLabel",
      "outlined": "buttonOutlined makeStyles-buttonShadow-1",
      "outlinedPrimary": "buttonOutlined makeStyles-buttonShadow-1",
      "outlinedSecondary": "buttonOutlinedSecondary makeStyles-buttonShadow-1",
      "root": "button",
    }
  }
  color="primary"
  label="test"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  variant="contained"
>
  test
</WithStyles(ForwardRef(Button))>
`;

exports[`Snapshot Testing Varying Props 1`] = `
<WithStyles(ForwardRef(Button))
  className=""
  classes={
    Object {
      "containedPrimary": "buttonPrimary makeStyles-buttonShadow-1",
      "containedSecondary": "buttonSecondary makeStyles-buttonShadow-1",
      "disabled": "buttonDisabled",
      "label": "buttonLabel",
      "outlined": "buttonOutlined makeStyles-buttonShadow-1",
      "outlinedPrimary": "buttonOutlined makeStyles-buttonShadow-1",
      "outlinedSecondary": "buttonOutlinedSecondary makeStyles-buttonShadow-1",
      "root": "button",
    }
  }
  color="secondary"
  label={
    <div>
      snapshot label
    </div>
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  variant="outlined"
>
  <div>
    snapshot label
  </div>
</WithStyles(ForwardRef(Button))>
`;
